--- a/src/index.scss
+++ b/src/index.scss
@@ -133,10 +133,30 @@ $border-color-primary: #0fbcf9;
 
 
       .editor__convans {
+        position: relative;
         margin: 0 auto;
         background: #fff;
         // box-shadow: 0 0 1px #000;
 
+
+        // .line-x,
+        // .line-y {
+        //   position: absolute;
+        // }
+
+        .line-x {
+          position: absolute;
+          top: 0;
+          bottom: 0;
+          border-left: 1px dashed $border-color-primary;
+        }
+
+        .line-y {
+          position: absolute;
+          left: 0;
+          right: 0;
+          border-top: 1px dashed $border-color-primary;
+        }
         .editor__convans-content {
           position: relative;
 
