--- a/src/index.scss
+++ b/src/index.scss
@@ -7,6 +7,7 @@
 $header-color: #2f3542;
 $title-color: #f1f2f6;
 $header-height: 27px;
+$text-color-disabled: rgb(107, 105, 105);
 
 $border-color-primary: #0fbcf9;
 
